# script-linux

./: Makefile  MemTempCPU  archome  bashrc  cacalendar  chrono  clp  cmd-prompt-ps1  completion  cpl  cs  dead  git-graph  gread  gui-cmd  journal  libresprite  license  lockscreen  lol  luminosity  manpage  mcm  mcphrase  monitor-display  multimc  muz  newp  noblankline  nocomment  power  prj  randoman  randwallpaper  reseaux-manager  rld-comp  rls  screenrecorder  screenshot  set-sound-card  (+8 more)
newp-template/cpp.template/: CMakeLists.txt
newp-template/cpp.template/src/: main.cpp
newp-template/cppl.template/: CMakeLists.txt
newp-template/java.template/src/: template.java
newp-template/web.template/: .webconfig
newp-template/web.template/src/: article.md  style.css
